--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,6 +15,12 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <fragment
+            android:name="com.example.screens.BlankFragment"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:tag="blank_fragment" />
+
         <TextView
             android:id="@+id/text"
             android:layout_width="wrap_content"
